[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "een-outreach"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
een-outreach = "een_outreach.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["een_outreach*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
